# qwen3-tts-coreml-demo

./: .gitignore  README.md  export_pipeline.py  find_scatter_mapping.py  pyproject.toml
coreml_conversion/: main.py
ios_app/: ContentView.swift  TTSApp.swift  TTSEngine.swift
